# multifunk

./: BinaryMessage.cpp  Mapping.cpp  Mapping.h  Readme.txt  main.cpp
middleware/host/src/: CMakeLists.txt
middleware/host/src/festomps-pddl/: CMakeLists.txt  Command.cpp  Command.h  Command.hh  FecCommands.cpp  FecCommands.h  FecNodes.cpp  FecNodes.h  LogoCommands.cpp  LogoCommands.h  LogoNodes.cpp  LogoNodes.h  Macro.cpp  Macro.h  Macro.hh  Mapping.cpp  Mapping.h  Node.cpp  Node.h  Node.hh  ProcessingCommands.cpp  ProcessingCommands.h  Solution.cpp  Solution.h  Solution_1_sbc.cpp  Solution_2_eh.cpp  Solution_3_co.cpp  StorageCommands.cpp  StorageCommands.h  Types.h  main.cpp
middleware/host/src/festomps-pddl/pddl/: FESTO_MPS_SETUP.pptx  FESTO_domain_1_sbc.pddl  FESTO_problem_1_sbc.pddl  FESTO_problem_1_sbc_toX.pddl  FESTO_problem_2_each.pddl  FESTO_problem_3_co.pddl  FESTO_problem_3_each.pddl  Strategy_1_sbc.txt  Strategy_2_eh.txt  Strategy_3_co.txt  translate.pl
middleware/host/src/marshal-test/: CMakeLists.txt  CalcDecimalBits.pl  GenMarshaler.pl  test-marshal.cpp
middleware/host/src/modbus-test/: CMakeLists.txt  test-modbus.cpp
middleware/host/src/monitor/: BinaryMessage.h  CMakeLists.txt
shared/: Services.h  Types.h  marshal.h
